; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_pcsamples.c_branch_tracing_enabled.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_pcsamples.c_branch_tracing_enabled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc = type { i32 }

@TRUE = common dso_local global i64 0, align 8
@pc_trace_frameworks = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @branch_tracing_enabled() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.proc*, align 8
  %3 = call %struct.proc* (...) @current_proc()
  store %struct.proc* %3, %struct.proc** %2, align 8
  %4 = load i64, i64* @TRUE, align 8
  %5 = load i64, i64* @pc_trace_frameworks, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = load i64, i64* @TRUE, align 8
  %9 = trunc i64 %8 to i32
  store i32 %9, i32* %1, align 4
  br label %18

10:                                               ; preds = %0
  %11 = load %struct.proc*, %struct.proc** %2, align 8
  %12 = icmp ne %struct.proc* %11, null
  br i1 %12, label %13, label %17

13:                                               ; preds = %10
  %14 = load %struct.proc*, %struct.proc** %2, align 8
  %15 = getelementptr inbounds %struct.proc, %struct.proc* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* %1, align 4
  br label %18

17:                                               ; preds = %10
  store i32 0, i32* %1, align 4
  br label %18

18:                                               ; preds = %17, %13, %7
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local %struct.proc* @current_proc(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
